cmake_minimum_required(VERSION 3.5)

project(ElaFramework VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
if (UNIX AND APPLE)
    message(STATUS "当前平台: MacOS")
    SET(QT_SDK_DIR "C:/Qt6/Qt6.6.3/6.6.3/msvc2019_64" CACHE PATH "QT SDK DIR")
elseif (UNIX)
    message(STATUS "当前平台: Linux")
    SET(QT_SDK_DIR "/home/liu/Qt5/Qt5.15.2/5.15.2/gcc_64" CACHE PATH "QT SDK DIR" FORCE)
elseif (WIN32)
    message(STATUS "当前平台: Windows")
    SET(QT_SDK_DIR D:/Qt/6.6.2/msvc2019_64 CACHE PATH "QT SDK DIR" FORCE)
endif()
SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/Install CACHE PATH "Installation path" FORCE)

option(BUILD_ELAPACKETIO "Build ElaPacketIO" OFF)
option(BUILD_ELAEXAMPLE "Build ElaWidgetToolsExample" OFF)
list(APPEND CMAKE_PREFIX_PATH ${QT_SDK_DIR})

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)

add_subdirectory(ElaWidgetTools)
if (WIN32 AND BUILD_ELAPACKETIO)
    add_definitions(-DBUILD_WITH_ELAPACKETIO)
    add_subdirectory(ElaPacketIO)
endif ()
if (BUILD_ELAEXAMPLE)
    add_definitions(-DBUILD_WITH_ELAPACKETIO)
    add_subdirectory(ElaWidgetToolsExample)
endif ()

if (${QT_VERSION} VERSION_LESS 6.1.0)
    set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.ElaWidgetTools)
endif ()
